--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>Calculator</title>
     <link rel="stylesheet" href="calculator.css" />
   </head>
-  <body style="background-image: url(svg's/apple-iphone-13-pro-max-2021-medium.png);
+<body style="background-image: url(styles/apple-iphone-13-pro-max-2021-medium.png);
   background-repeat: no-repeat;
   background-size: 300px;
   background-position: center;
